add photo upload using Carriewave gem

--- a/app/views/admin/restaurants/_form.html.erb
+++ b/app/views/admin/restaurants/_form.html.erb
@@ -1,4 +1,4 @@
-<% if @restaurent.error.any? %>
+<% if @restaurant.errors.any? %>
 	<h2>We have some errors here !</h2>
 	<u1>
 		<% @restaurent.errors.full_messages.each do |msg| %>
@@ -8,7 +8,7 @@
 <% end %>
 
 
-<%= form_for [:admin, @restaurent] do |f| %>
+<%= form_for [:admin, @restaurant] do |f| %>
 	<%= f.label :name, "Name" %>
 	<%= f.text_field :name %>
 
@@ -23,6 +23,10 @@
 
 	<%= f.label :description, "Description" %>
 	<%= f.text_field :description %>
+
+	<%= f.label :image, "Photo" %>
+	<%= image_tag  @restaurant.image, width: '300px' if @restaurant.image? %>
+	<%= f.file_field :image %>
 
 	<%= f.submit %>
 <% end %>
