--- a/app/views/admin/restaurants/index.html.erb
+++ b/app/views/admin/restaurants/index.html.erb
@@ -1,14 +1,42 @@
-<h1>餐廳後台</h1>
+<div class="container">
 
-<u1>
-	<%= @restaurants.each do |restaurant| %>
-	<li>
-		<%= restaurant.name %>
-		<%= link_to  "show", admin_restaurant_path(restaurant) %>
-		<%= link_to  "edit", edit_admin_restaurant_path(restaurant) %>
-		<%= link_to  "show", admin_restaurant_path(restaurant), method: :delete, data: {confirm:"Are you sure?"} %>
-	</li>
-	<% end %>
-</u1>
-<%= paginate @restaurants %>
-<%= link_to  "New Restaurant", new_admin_restaurant_path %>
+	<h1>餐廳後台</h1>
+
+	<div class="row">
+		<div class="col-md-12">
+			<div>
+				
+			</div>
+			<br>
+			<table class="table table-striped table-bordered">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Category</th>
+						<th>Name</th>
+						<th>#</th>
+					</tr>
+				</thead>
+				<tbody>
+					<%= @restaurants.each do |restaurant| %>
+					<tr>
+						<th scope="row"><%= restaurant.id %></th>
+						<td>[<%= restaurant.category.name %>]</td>
+						<td><%= restaurant.name %></td>
+						<td>
+							<%= link_to  "show", admin_restaurant_path(restaurant) %>
+							<%= link_to  "edit", edit_admin_restaurant_path(restaurant) %>
+							<%= link_to  "show", admin_restaurant_path(restaurant), method: :delete, data: {confirm:"Are you sure?"} %>
+						</td>
+					</tr>
+					<% end %>
+				</tbody>
+			</table>
+
+			<div class="text-center">
+				<%= paginate @restaurants %>
+			</div>
+		</div>
+	</div>
+</div>
+	
