--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,28 +1,38 @@
 <div class="container">
-        <h1>餐廳分類總表</h1>
+	<h1>餐廳分類總表</h1>
 
-        <div>
-                <%= link_to  "Restaurant", admin_rastaurnats_path %> |
-                <%= link_to  "Categories", admin_categories_path %>
-        </div>
-        <div class="row">
-                <div class="col-md-12">
-                        <table class="table table-striped table-borded">
-                                <thead>
-                                        <tr>
-                                                <th>#</th>
-                                                <th>Category Name</th>
-                                        </tr>
-                                </thead>
-                                <tbody> 
-                                        <% @categories.each do |category| %>
-                                        <tr>
-                                                <th scope="row">category.id</th>
-                                                <td><%= category.name %></td>
-                                        </tr>
-                                        <% end %>
-                                </tbody>
-                        </table>
-                </div>
-        </div>
+	<div>
+		<%= link_to  "Restaurant", admin_restaurants_path %> |
+		<%= link_to  "Categories", admin_categories_path %>
+	</div>
+
+	<div class="form-inline">
+		<%= form_for [:admin, @category] do |f| %>
+			<div class="form-group">
+				<%= f.text_field :name, placeholder: "Category name", class: "form-control" %>	
+			</div>
+			<%= f.submit class: "btn btn-primary" %>
+		<% end %>
+	</div>
+
+	<div class="row">
+		<div class="col-md-12">
+			<table class="table table-striped table-borded">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Category Name</th>
+					</tr>
+				</thead>
+				<tbody> 
+					<% @categories.each do |category| %>
+					<tr>
+						<th scope="row">category.id</th>
+						<td><%= category.name %></td>
+					</tr>
+					<% end %>
+				</tbody>
+			</table>
+		</div>
+	</div>
 </div>
