--- a/app/views/admin/restaurants/index.html.erb
+++ b/app/views/admin/restaurants/index.html.erb
@@ -3,9 +3,9 @@
 	<h1>餐廳後台</h1>
 
 	<div>
-                <%= link_to  "Restaurant", admin_rastaurnats_path %> |
-                <%= link_to  "Categories", admin_categories_path %>
-        </div>
+		<%= link_to  "Restaurant", admin_restaurants_path %> |
+		<%= link_to  "Categories", admin_categories_path %>
+	</div>
 
 	<div class="row">
 		<div class="col-md-12">
