--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -5,15 +5,19 @@
 		<%= link_to  "Restaurant", admin_restaurants_path %> |
 		<%= link_to  "Categories", admin_categories_path %>
 	</div>
-
+	<br>
 	<div class="form-inline">
 		<%= form_for [:admin, @category] do |f| %>
 			<div class="form-group">
 				<%= f.text_field :name, placeholder: "Category name", class: "form-control" %>	
 			</div>
 			<%= f.submit class: "btn btn-primary" %>
+			<% if @category.errors.any? %>
+				<%= @category.errors.full_messages.to_sentence %>
+			<% end %>
 		<% end %>
 	</div>
+	<br>
 
 	<div class="row">
 		<div class="col-md-12">
