--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -36,6 +36,7 @@
 						<td><%= category.name %></td>
 						<td>
 							<%= link_to "Edit", admin_categories_path(id: category.id) %>
+							<%= link_to "Delete", admin_category_path(category), method: :delete, data: { confirm: "Are you sure?"} %>
 						</td>
 					</tr>
 					<% end %>
