--- a/app/views/admin/restaurants/_form.html.erb
+++ b/app/views/admin/restaurants/_form.html.erb
@@ -45,7 +45,7 @@
 
 			<div class="form-group">
 				<%= f.label :image, "Photo" %>
-				<%= image_tag  @restaurant.image, width: '300px' if @restaurant.image? %>
+				<%= image_tag  @restaurant.image.url.to_s, width: '300px' if @restaurant.image? %>
 				<%= f.file_field :image %>
 			</div>
 
